# libs/idp-server-core/src/main/java/org/idp/server/core/openid/identity/device/AuthenticationDeviceLogApi.java
@@ -1,0 +1,28 @@
+/*
+ * Copyright 2025 Hirokazu Kobayashi
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.idp.server.core.openid.identity.device;
+
+import org.idp.server.platform.multi_tenancy.tenant.TenantIdentifier;
+import org.idp.server.platform.type.RequestAttributes;
+
+public interface AuthenticationDeviceLogApi {
+
+  AuthenticationDeviceLogResponse log(
+      TenantIdentifier tenantIdentifier,
+      AuthenticationDeviceLogRequest request,
+      RequestAttributes requestAttributes);
+}
